[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Visual/Player/path902.png" type="Texture" id=1]
[ext_resource path="res://Resources/Visual/Player/path900.png" type="Texture" id=2]
[ext_resource path="res://Resources/Visual/Player/path828.png" type="Texture" id=3]
[ext_resource path="res://Resources/Logic/Codes/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Resources/Logic/Codes/Player/Camera2D.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.4301, 60.6179 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.13
drag_margin_top = 0.4
drag_margin_right = 0.13
drag_margin_bottom = 0.15
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Sprite" type="Node2D" parent="."]

[node name="spr_torso" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.972549, 0.901961, 0.635294, 1 )
texture = ExtResource( 3 )

[node name="spr_hat1" type="Sprite" parent="Sprite/spr_torso"]
modulate = Color( 0.87451, 0.811765, 0.458824, 1 )
position = Vector2( 2.99371, -49.6951 )
texture = ExtResource( 2 )

[node name="spr_hat2" type="Sprite" parent="Sprite/spr_torso/spr_hat1"]
position = Vector2( -2.39496, -18.5609 )
texture = ExtResource( 1 )

[node name="spr_arm1" type="Sprite" parent="Sprite/spr_torso"]
self_modulate = Color( 0.72549, 0.721324, 0.458824, 1 )
position = Vector2( -0.0639038, 26.552 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 3 )

[node name="spr_arm2" type="Sprite" parent="Sprite/spr_torso"]
self_modulate = Color( 0.72549, 0.721324, 0.458824, 1 )
position = Vector2( 50.685, 11.4399 )
scale = Vector2( 0.3, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="tmr_CoyoteJump" type="Timer" parent="."]

[node name="tmr_Dash" type="Timer" parent="."]

[node name="tmr_DashCD" type="Timer" parent="."]
[connection signal="groundedUpdated" from="." to="Camera2D" method="_on_Player_groundedUpdated"]
[connection signal="timeout" from="tmr_CoyoteJump" to="." method="_on_tmr_CoyoteJump_timeout"]
[connection signal="timeout" from="tmr_Dash" to="." method="_on_tmr_Dash_timeout"]
[connection signal="timeout" from="tmr_DashCD" to="." method="_on_tmr_DashCD_timeout"]
